# SIQSE

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: basic_selection.py  iterative_with_feedback.py  pyterrier_integration.py  pyterrier_minimal.py
siqse/: __init__.py  selector.py  utils.py
