[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siqse"
version = "0.1.0"
description = "Simulation-based Interactive Query Suggestion Evaluation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["information retrieval", "query expansion", "llm", "keyphrase selection", "IR"]
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Query Suggestion Selection",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/JorgeGabin/siqse"
Documentation = "https://github.com/JorgeGabin/siqse/blob/main/README.md"
Repository = "https://github.com/JorgeGabin/siqse"
Issues = "https://github.com/JorgeGabin/siqse/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py39"
